# ssh-putki

./: README.md  ssh-putki.cabal
haskell-src/: Main.hs  SendFd.hs  send_fd.c
src/: main.c  ssh.h
